# fugacio

./: .gitignore  .importlinter  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  conftest.py  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  oracles.yml  pr-lint.yml  publish.yml  release.yml
advanced-control/: index.html
api/: index.html
api/copilot/: index.html
api/copilot/agent/: index.html
api/copilot/providers/: index.html
api/copilot/report/: index.html
api/copilot/tools/: index.html
api/sim/: index.html
api/sim/columns/: index.html
api/sim/dynamics/: index.html
api/sim/economics/: index.html
api/sim/eo/: index.html
api/sim/flowsheet/: index.html
api/sim/integration/: index.html
api/sim/models/: index.html
api/sim/mpc/: index.html
api/sim/optimization/: index.html
api/sim/reactors/: index.html
api/sim/streams/: index.html
api/sim/units/: index.html
api/sim/utilities/: index.html
api/thermo/: index.html
api/thermo/activity/: index.html
api/thermo/data/: index.html
api/thermo/energy/: index.html
api/thermo/eos/: index.html
api/thermo/equilibrium/: index.html
api/thermo/helmholtz/: index.html
api/thermo/lle/: index.html
api/thermo/reactions/: index.html
api/thermo/regression/: index.html
api/thermo/saft/: index.html
api/thermo/transport/: index.html
docs/: CNAME  advanced-control.md  dynamics.md  equation-oriented.md  heat-integration.md  index.md  molecular-saft.md  optimization.md  phase-equilibrium.md  physical-properties.md  reactions.md  reference-fluids.md
docs/api/: index.md
docs/api/copilot/: agent.md  index.md  providers.md  report.md  tools.md
docs/api/sim/: columns.md  dynamics.md  economics.md  eo.md  flowsheet.md  index.md  integration.md  models.md  mpc.md  optimization.md  reactors.md  streams.md  units.md  utilities.md
docs/api/thermo/: activity.md  data.md  energy.md  eos.md  equilibrium.md  helmholtz.md  index.md  lle.md  reactions.md  regression.md  saft.md  transport.md
dynamics/: index.html
equation-oriented/: index.html
heat-integration/: index.html
molecular-saft/: index.html
optimization/: index.html
phase-equilibrium/: index.html
physical-properties/: index.html
reactions/: index.html
reference-fluids/: index.html
scripts/: gen_components.py  gen_eos_params.py  gen_formation.py  gen_helmholtz.py  gen_parameter_bank.py  gen_parameters.py  gen_property_data.py  gen_thermoml_samples.py  pin_workspace_deps.py
search/: search_index.json
styles/: brand.css
