[project]
name = "fugacio"
version = "0.0.1"
description = "Open, differentiable thermodynamics + process simulation, with an AI design copilot."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Owen Carey", email = "37121709+owenthcarey@users.noreply.github.com" },
]
dependencies = []

# The root is the workspace/aggregator only; it is never built or published.
[tool.uv]
package = false
# Supply-chain cooldown: ignore distributions published in the last 7 days so a
# malicious release has time to be detected and yanked before we adopt it. This
# is a rolling window applied when the lockfile is (re)resolved; it is recorded
# in uv.lock as `exclude-newer-span` and only moves forward on `uv lock --upgrade`,
# keeping `uv sync --locked` reproducible in CI.
exclude-newer = "7 days"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "import-linter>=2.1",
    "pre-commit>=4.0",
]
docs = [
    "mkdocs-material>=9.5",
]
# Optional reference packages for the differential-testing oracles and the data
# generation scripts. Not runtime dependencies of any Fugacio package; install
# with `uv sync --group oracles` (CI does this only for the opt-in oracle run).
oracles = [
    "thermo>=0.2",
    "chemicals>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = [
    "packages/fugacio-thermo/src",
    "packages/fugacio-sim/src",
    "packages/fugacio-copilot/src",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["fugacio"]

[tool.mypy]
python_version = "3.11"
namespace_packages = true
explicit_package_bases = true
mypy_path = "packages/fugacio-thermo/src:packages/fugacio-sim/src:packages/fugacio-copilot/src"
files = [
    "packages/fugacio-thermo/src",
    "packages/fugacio-sim/src",
    "packages/fugacio-copilot/src",
]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# JAX array ops are largely untyped; don't fail on Any propagation from them.
warn_return_any = false

[[tool.mypy.overrides]]
module = ["jax.*", "jaxlib.*"]
ignore_missing_imports = true

# Optional differential-testing oracles (see fugacio.thermo.oracles). They are
# never runtime dependencies and ship no type stubs, so ignore them whether or
# not they happen to be installed in a given environment.
[[tool.mypy.overrides]]
module = ["CoolProp.*", "thermo.*", "chemicals.*", "cantera.*", "juliacall.*"]
ignore_missing_imports = true

# Optional LLM provider SDKs (fugacio.copilot.llm extras). Lazily imported and
# only needed to talk to a live model, so ignore them when not installed.
[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Oracle (differential-testing) tests are opt-in: they require heavy optional
# packages (CoolProp / chemicals) and are excluded from the default run so the
# unit suite stays fast and hermetic. Run them explicitly with `just oracles`
# (i.e. `pytest -m oracle`).
addopts = "-q -m 'not oracle'"
markers = [
    "oracle: differential tests against external reference codes (opt-in; needs CoolProp/chemicals)",
]
testpaths = [
    "packages/fugacio-thermo/tests",
    "packages/fugacio-sim/tests",
    "packages/fugacio-copilot/tests",
]

[tool.coverage.run]
branch = true
source = ["fugacio"]
