[project]
# Workspace root only, renamed off the bare `fugacio` dist name so the
# publishable umbrella meta-package (packages/fugacio) can own it. The root is
# never built or published (see `package = false` below), so this dist name is
# internal-only; the `fugacio` import namespace is unaffected.
name = "fugacio-workspace"
version = "0.2.0"
description = "Open, differentiable thermodynamics + process simulation, with an AI design copilot."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Owen Carey", email = "37121709+owenthcarey@users.noreply.github.com" },
]
dependencies = []

# The root is the workspace/aggregator only; it is never built or published.
[tool.uv]
package = false
# Supply-chain cooldown: ignore distributions published in the last 7 days so a
# malicious release has time to be detected and yanked before we adopt it. This
# is a rolling window applied when the lockfile is (re)resolved; it is recorded
# in uv.lock as `exclude-newer-span` and only moves forward on `uv lock --upgrade`,
# keeping `uv sync --locked` reproducible in CI.
exclude-newer = "7 days"
# Recent jaxlib releases ship no Intel-macOS wheels, so make the resolver keep a
# compatible (older) jax/jaxlib fork for x86_64 Macs instead of producing a lock
# that cannot be synced there.
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "import-linter>=2.1",
    "pre-commit>=4.0",
]
# Documentation site (MkDocs + Material). mkdocstrings renders the API reference
# straight from the package docstrings, so a docs build imports the workspace
# packages: build with `uv sync --all-packages --group docs` (see .github/workflows/docs.yml).
docs = [
    "mkdocs>=1.6",
    "mkdocs-material[imaging]>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-autorefs>=1.2",
    "pymdown-extensions>=10.7",
]
# Optional reference packages for the differential-testing oracles and the data
# generation scripts. Not runtime dependencies of any Fugacio package; install
# with `uv sync --group oracles` (CI does this only for the opt-in oracle run).
oracles = [
    "thermo>=0.2",
    "chemicals>=1.1",
    "coolprop>=6.6",
    # No Intel-macOS wheels for current Cantera, so restrict it to Linux (CI).
    "cantera>=3.0; sys_platform == 'linux'",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = [
    "packages/fugacio-thermo/src",
    "packages/fugacio-sim/src",
    "packages/fugacio-copilot/src",
]

[tool.ruff.lint]
# Docstring (D) rules use the Google convention; see [tool.ruff.lint.pydocstyle].
# The public API is rendered on the docs site straight from these docstrings via
# mkdocstrings, so the docstring is the single source of truth for the reference
# and must never drift from the code.
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "D"]
# D105 (magic-method docstring): dunders (__repr__, __eq__, pytree hooks, ...) are
#   self-explanatory and aren't rendered (mkdocstrings filters leading-underscore
#   members).
# D107 (missing __init__ docstring): mkdocstrings merges __init__ into the class
#   docstring, so the class docstring is the source of truth for construction.
# D203/D213: conflict with the Google convention defaults; ruff already suppresses
#   these via `convention = "google"`, but we list them defensively.
ignore = ["D105", "D107", "D203", "D213"]

[tool.ruff.lint.isort]
known-first-party = ["fugacio"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests, data-generation scripts, and conftest aren't part of the published API
# surface and aren't rendered on the docs site, so they're exempt from docstrings.
"**/tests/**/*.py" = ["D"]
"scripts/**/*.py" = ["D"]
"**/conftest.py" = ["D"]
# Concrete dynamic units subclass the DynamicUnit ABC, which carries the canonical
# docstrings on its abstract methods (initial_state / evaluate / measured). The
# overrides are registered and consumed through the base interface, so requiring a
# per-override docstring would only duplicate the base class.
"packages/fugacio-sim/src/fugacio/sim/dynamics/units.py" = ["D102"]

[tool.mypy]
python_version = "3.11"
namespace_packages = true
explicit_package_bases = true
mypy_path = "packages/fugacio-thermo/src:packages/fugacio-sim/src:packages/fugacio-copilot/src"
files = [
    "packages/fugacio-thermo/src",
    "packages/fugacio-sim/src",
    "packages/fugacio-copilot/src",
]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# JAX array ops are largely untyped; don't fail on Any propagation from them.
warn_return_any = false

[[tool.mypy.overrides]]
module = ["jax.*", "jaxlib.*"]
ignore_missing_imports = true

# Optional differential-testing oracles (see fugacio.thermo.oracles). They are
# never runtime dependencies and ship no type stubs, so ignore them whether or
# not they happen to be installed in a given environment.
[[tool.mypy.overrides]]
module = ["CoolProp.*", "thermo.*", "chemicals.*", "cantera.*", "juliacall.*"]
ignore_missing_imports = true

# Optional LLM provider SDKs (fugacio.copilot.llm extras). Lazily imported and
# only needed to talk to a live model, so ignore them when not installed.
[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Oracle (differential-testing) tests are opt-in: they require heavy optional
# packages (CoolProp / chemicals) and are excluded from the default run so the
# unit suite stays fast and hermetic. Run them explicitly with `just oracles`
# (i.e. `pytest -m oracle`).
addopts = "-q -m 'not oracle'"
markers = [
    "oracle: differential tests against external reference codes (opt-in; needs CoolProp/chemicals)",
]
testpaths = [
    "packages/fugacio-thermo/tests",
    "packages/fugacio-sim/tests",
    "packages/fugacio-copilot/tests",
]

[tool.coverage.run]
branch = true
source = ["fugacio"]

# ── Semantic Release ────────────────────────────────────────────────
# One version, one tag, one changelog for the whole workspace: every
# package is bumped together (lockstep), the same single-version model the
# Hydrateless and WeaveFFI monorepos use. python-semantic-release stamps the
# shared next version into all five pyproject.toml files and the three
# component packages' __init__.py files; .github/workflows/release.yml then
# builds and publishes the four packages to PyPI. Conventional-commit messages
# drive the bump.

[tool.semantic_release]
# Stay in the 0.x series while the API is pre-alpha: the first feature release
# becomes 0.1.0 (not 1.0.0), and a breaking change bumps the minor (0.1.0 ->
# 0.2.0) rather than jumping to 1.0.0.
allow_zero_version = true
major_on_zero = false
commit_message = "chore(release): v{version}"
tag_format = "v{version}"
# The lockstep bump: the shared version is stamped into the workspace root and
# each package's project.version via `version_toml` (a structural, in-place
# edit). NOTE: this requires PSR >= v10 (pinned in .github/workflows/release.yml);
# the v9 `version_toml` writer re-serialized pyproject.toml through tomlkit on
# every run, which reordered the tables and added a blank line without bound.
version_toml = [
    "pyproject.toml:project.version",
    "packages/fugacio-thermo/pyproject.toml:project.version",
    "packages/fugacio-sim/pyproject.toml:project.version",
    "packages/fugacio-copilot/pyproject.toml:project.version",
    "packages/fugacio/pyproject.toml:project.version",
]
# ... and into each package's __version__ so `fugacio.<pkg>.__version__`
# matches the published distribution.
version_variables = [
    "packages/fugacio-thermo/src/fugacio/thermo/__init__.py:__version__",
    "packages/fugacio-sim/src/fugacio/sim/__init__.py:__version__",
    "packages/fugacio-copilot/src/fugacio/copilot/__init__.py:__version__",
]
# After stamping the version, pin each package's intra-workspace dependencies to
# it (so a published fugacio-sim requires fugacio-thermo==<version>, and so on),
# then refresh the lockfile so the bumped versions stay consistent with
# `uv sync --locked`. Semantic Release commits uv.lock alongside the bump via
# `assets`. uv isn't in the semantic-release container, so install it first.
# This is the lockstep analog of Hydrateless's "npm install --package-lock-only"
# and WeaveFFI's "cargo generate-lockfile" release steps.
build_command = "python scripts/pin_workspace_deps.py && python -m pip install --quiet uv && uv lock"
assets = ["uv.lock"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
# Regenerate the whole changelog each release (the v9 default behavior). v10
# defaults to "update" mode, which only edits the file when an insertion-flag
# marker is present; "init" keeps our tag-driven, fully regenerated changelog
# without needing that marker.
mode = "init"
# Keep Semantic Release's own release commits out of the generated changelog.
exclude_commit_patterns = [
    "^chore\\(release\\):",
]

[tool.semantic_release.changelog.default_templates]
# `changelog_file` moved under default_templates in v10 (the top-level
# changelog.changelog_file is deprecated).
changelog_file = "CHANGELOG.md"
# v10 masks the first release as just "Initial Release" by default; keep the
# detailed v0.0.1 breakdown we already published instead.
mask_initial_release = false

[tool.semantic_release.publish]
# build_command refreshes the lockfile rather than producing distributions, and
# the packages go to PyPI (not attached to the GitHub Release), so there are no
# artifacts to upload to the release.
upload_to_vcs_release = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build", "chore", "ci", "docs", "feat", "fix",
    "perf", "refactor", "revert", "style", "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
# v10 defaults both to true; set them explicitly per the v9 -> v10 upgrade guide
# so a squash-merged PR's body is parsed for conventional commits and standalone
# merge commits are ignored.
parse_squash_commits = true
ignore_merge_commits = true
